[package]
name = "rti"
version = "0.1.0"
edition = "2021"
authors = ["Chris Forte <cforte7@gmail.com>"]
license= "MIT"
description = "A tool to convert to/from unix epoch times."
readme = "README.md"
homepage = "https://github.com/cforte7/rusty_time_interpreter"
repository = "https://github.com/cforte7/rusty_time_interpreter"
keywords = ["time", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
itertools = "0.10.2"
